src/snapshots/purring__lexer__tests__block_comment2.snap
---
source: src/lexer.rs
expression: "p(\"a +{- this\\n is\\n a\\n comment\\n -}b\")"
---
Ok(Lower((0, "a")))
Ok(Whitespace(" "))
Ok(Symbol("+"))
Ok(BlockComment("{- this\n is\n a\n comment\n -}"))
Ok(Lower((3, "b")))
