src/snapshots/purring__lexer__tests__char_hex.snap
---
source: src/lexer.rs
expression: "p(r\"'\\x00'\")"
---
Ok(Char("'\\x00'"))
Ok(LayEnd)
Ok(LayTop)
