src/snapshots/purring__lexer__tests__forall.snap
---
source: src/lexer.rs
expression: "p(\"forall f. Monad f => f a -> f Unit\")"
---
Ok(Forall)
Ok(Whitespace(" "))
Ok(Lower((7, "f")))
Ok(Symbol("."))
Ok(Whitespace(" "))
Ok(Upper((10, "Monad")))
Ok(Whitespace(" "))
Ok(Lower((16, "f")))
Ok(Whitespace(" "))
Ok(RightFatArrow)
Ok(Whitespace(" "))
Ok(Lower((21, "f")))
Ok(Whitespace(" "))
Ok(Lower((23, "a")))
Ok(Whitespace(" "))
Ok(RightArrow)
Ok(Whitespace(" "))
Ok(Lower((28, "f")))
Ok(Whitespace(" "))
Ok(Upper((30, "Unit")))
