src/snapshots/purring__lexer__tests__funky_string.snap
---
source: src/lexer.rs
expression: "p(\"\\\"\\\"\")"
---
Ok(String("\"\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\""))
Ok(LayEnd)
Ok(LayTop)
