src/snapshots/purring__lexer__tests__hole.snap
---
source: src/lexer.rs
expression: "p(\"a = ?foo 1 2\")"
---
Ok(Lower("a"))
Ok(Op("="))
Ok(Hole("?foo"))
Ok(Number("1"))
Ok(Number("2"))
Ok(LayEnd)
Ok(LayTop)
