src/snapshots/purring__lexer__tests__int_1.snap
---
source: src/lexer.rs
expression: "p(\"1_111_1\")"
---
Ok(Number("1_111_1"))
Ok(LayEnd)
Ok(LayTop)
