src/snapshots/purring__lexer__tests__knows_if_start_of_line.snap
---
source: src/lexer.rs
expression: "p(r#\"\nimport A as A\n\nfoo :: Int\nfoo = bar + baz\n        \"#)"
---
Ok(LayTop)
Ok(Lower("import"))
Ok(Upper("A"))
Ok(As)
Ok(Upper("A"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(ColonColon)
Ok(Upper("Int"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(Op("="))
Ok(Lower("bar"))
Ok(Op("+"))
Ok(Lower("baz"))
Ok(LayEnd)
Ok(LayTop)
