src/snapshots/purring__lexer__tests__line_comment.snap
---
source: src/lexer.rs
expression: "p(\"a + -- this is a comment\\nb\")"
---
Ok(Lower("a"))
Ok(Symbol("+"))
Ok(Lower("b"))
