src/snapshots/purring__lexer__tests__lower.snap
---
source: src/lexer.rs
expression: "p(\"variable\")"
---
Ok(Lower("variable"))
Ok(LayEnd)
Ok(LayTop)
