src/snapshots/purring__lexer__tests__lower_with_single_quote.snap
---
source: src/lexer.rs
expression: "p(\"myFunction'\")"
---
Ok(Lower("myFunction'"))
Ok(LayEnd)
Ok(LayTop)
